test/libsolidity/syntaxTests/nameAndTypeResolution/476_too_large_arrays_for_calldata_external.sol
contract C {
    function f(uint[85678901234] calldata a) pure external {
    }
}
// ----
// TypeError: (28-56): Array is too large to be encoded.
